# my-memory-pool

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: common.h
include/gc/: gc_factory.h
include/gc/interface/: garbage_collect.h
include/memory/: memory_chunk.h  memory_pool.h
src/gc/: gc_factory.cpp  mark_clean.cpp  mark_compact.cpp
src/log/: GC_MARK_CLEAN.txt  GC_MARK_COMPACT.txt  GC_MARK_COPY.txt
src/memory/: memory_cell.cpp  memory_chunk.cpp  memory_pool.cpp
